--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://portfolio-six-drab-52.vercel.app/react-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
